# luminae

./: .env.example  .gitignore  IMPROVEMENTS.md  README.md  deployment_and_costs.md  package.json  pnpm-lock.yaml  render.yaml  schema.sql  test_upload.py  turbo.json  vercel.json
.github/workflows/: ci-cd.yml
apps/api/: Dockerfile  debug.py  pyproject.toml  pytest.ini  requirements.txt  run_test.py  test_file.py  test_grant.py  test_redis.py  trace.py
apps/api/src/: __init__.py  config.py  main.py
apps/api/src/middleware/: budget_guard.py  rate_limit.py
apps/api/src/models/: schemas.py
apps/api/src/routers/: analysis.py  chat.py  health.py
apps/api/src/services/: agent_orchestrator.py  job_store.py  mistral_client.py  ocr_service.py  reasoning_service.py  vision_service.py
apps/api/src/utils/: retry.py  supabase_client.py  validators.py
apps/api/tests/: test_api.py  test_budget_guard.py  test_core.py  test_health.py  test_validators.py
apps/web/: Dockerfile  next.config.js  package.json
apps/web/src/app/: error.tsx  globals.css  layout.tsx  page.tsx
apps/web/src/app/auth/: page.tsx
apps/web/src/app/dashboard/: page.tsx
apps/web/src/app/history/: page.tsx
apps/web/src/app/privacy/: page.tsx
apps/web/src/app/terms/: page.tsx
apps/web/src/components/analysis/: AnalysisDashboard.tsx  AnalysisList.tsx
apps/web/src/components/chatbot/: Chatbot.tsx
apps/web/src/hooks/: useAnalysis.ts  useAuth.tsx
apps/web/src/lib/: api-client.ts  supabase.ts  utils.ts
apps/web/src/stores/: analysisStore.ts
infra/: docker-compose.yml
(+11 files in other folders)
